Integrate polis board into ams yocto environment
- a new template is added phyimx8.
- the init script is extended
- all meta-ams-bsp-phytecimx8 layer is removed
- its content ends up in a dynamic layer as part of meta-ams-bsp layer

--- a/meta-ams-bsp/conf/distro/ams-bsp.conf
+++ b/meta-ams-bsp/conf/distro/ams-bsp.conf
@@ -45,7 +45,7 @@ DISTRO_FEATURES += "ipv4 ipv6"
 DISTRO_FEATURES += "gplv"
 DISTRO_FEATURES += "gstreamer"
 # support of InitRD installation package
-DISTRO_FEATURES += "initrd"
+# DISTRO_FEATURES += "initrd"
 DISTRO_FEATURES += "irda"
 DISTRO_FEATURES += "largefile"
 DISTRO_FEATURES += "libc-locales"
@@ -69,7 +69,7 @@ DISTRO_FEATURES += "zeroconf"
 DISTRO_EXTRA_RDEPENDS = "packagegroup-core-boot"
 
 # INITRD addons to image
-DISTRO_EXTRA_RRECOMMENDS:append = " ${@bb.utils.contains('COMBINED_FEATURES', 'initrd', '${INITRD_PACKAGE}', '', d)} "
+# DISTRO_EXTRA_RRECOMMENDS:append = " ${@bb.utils.contains('COMBINED_FEATURES', 'initrd', '${INITRD_PACKAGE}', '', d)} "
 
 # Preferred providers and versions
 #------------------------------------------------------------------------------
