--- a/meta-ams-bsp/conf/layer.conf
+++ b/meta-ams-bsp/conf/layer.conf
@@ -14,3 +14,10 @@ LAYERVERSION_ams-bsp = "3"
 LAYERSERIES_COMPAT_ams-bsp = "kirkstone"
 
 LAYERDEPENDS_ams-bsp = " "
+
+BBFILES_DYNAMIC += " \
+    meta-arm:${LAYERDIR}/bbappends/meta-arm/recipes-*/*/*.bb \
+    meta-arm:${LAYERDIR}/bbappends/meta-arm/recipes-*/*/*.bbappend \
+    phytec:${LAYERDIR}/bbappends/meta-phytec/recipes-*/*/*.bb \
+    phytec:${LAYERDIR}/bbappends/meta-phytec/recipes-*/*/*.bbappend \
+"
