Turn meta-ams-bsp-rpi into a dynamic layer of meta-ams-bsp

--- a/meta-ams-bsp/conf/layer.conf
+++ b/meta-ams-bsp/conf/layer.conf
@@ -20,4 +20,6 @@ BBFILES_DYNAMIC += " \
     meta-arm:${LAYERDIR}/bbappends/meta-arm/recipes-*/*/*.bbappend \
     phytec:${LAYERDIR}/bbappends/meta-phytec/recipes-*/*/*.bb \
     phytec:${LAYERDIR}/bbappends/meta-phytec/recipes-*/*/*.bbappend \
+    raspberrypi:${LAYERDIR}/bbappends/meta-raspberrypi/recipes-*/*/*.bb \
+    raspberrypi:${LAYERDIR}/bbappends/meta-raspberrypi/recipes-*/*/*.bbappend \
 "
