Add dynamic layer for stm32mp159 discovery board

--- a/meta-ams-bsp/conf/layer.conf
+++ b/meta-ams-bsp/conf/layer.conf
@@ -22,4 +22,6 @@ BBFILES_DYNAMIC += " \
     phytec:${LAYERDIR}/bbappends/meta-phytec/recipes-*/*/*.bbappend \
     raspberrypi:${LAYERDIR}/bbappends/meta-raspberrypi/recipes-*/*/*.bb \
     raspberrypi:${LAYERDIR}/bbappends/meta-raspberrypi/recipes-*/*/*.bbappend \
+    stm-st-stm32mp:${LAYERDIR}/bbappends/meta-st-stm32mp/recipes-*/*/*.bb \
+    stm-st-stm32mp:${LAYERDIR}/bbappends/meta-st-stm32mp/recipes-*/*/*.bbappend \
 "
