Add mickledore compatibility to meta-ams and meta-ams-bsp

--- a/meta-ams-bsp/conf/layer.conf
+++ b/meta-ams-bsp/conf/layer.conf
@@ -11,7 +11,7 @@ BBFILE_PATTERN_ams-bsp = "^${LAYERDIR}/"
 # from applications
 BBFILE_PRIORITY_ams-bsp = "50"
 LAYERVERSION_ams-bsp = "3"
-LAYERSERIES_COMPAT_ams-bsp = "kirkstone"
+LAYERSERIES_COMPAT_ams-bsp = "kirkstone mickledore"
 
 LAYERDEPENDS_ams-bsp = " "
 
