--- a/meta-ams/conf/layer.conf
+++ b/meta-ams/conf/layer.conf
@@ -12,7 +12,7 @@ BBFILE_PRIORITY_ams = "46"
 # This should only be incremented on significant changes that will
 # cause compatibility issues with other layers
 LAYERVERSION_ams = "3"
-LAYERSERIES_COMPAT_ams = "kirkstone langdale"
+LAYERSERIES_COMPAT_ams = "kirkstone mickledore"
 
 
 # Set a variable to get to the top of the metadata location
