--- a/meta-ams/conf/templates/default/local.conf.sample
+++ b/meta-ams/conf/templates/default/local.conf.sample
@@ -1,6 +1,6 @@
 # CONF_VERSION = "2"
 DISTRO ?= "ams"
-YOCTO_VERSION = "kirkstone"
+YOCTO_VERSION = "mickledore"
 
 PACKAGE_CLASSES ?= "package_ipk"
 
