Polish meta-ams-bsp layer configuration

--- a/meta-ams-bsp/conf/layer.conf
+++ b/meta-ams-bsp/conf/layer.conf
@@ -1,19 +1,18 @@
 # We have a conf and classes directory, add to BBPATH
 BBPATH .= ":${LAYERDIR}"
 
-# We have recipes-* directories, add to BBFILES
-BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
-            ${LAYERDIR}/recipes-*/*/*.bbappend"
-
 BBFILE_COLLECTIONS += "ams-bsp"
 BBFILE_PATTERN_ams-bsp = "^${LAYERDIR}/"
-# High priority since it provides simple frame to develop BSP's in isolation
-# from applications
+
 BBFILE_PRIORITY_ams-bsp = "50"
 LAYERVERSION_ams-bsp = "3"
 LAYERSERIES_COMPAT_ams-bsp = "kirkstone mickledore"
 
-LAYERDEPENDS_ams-bsp = " "
+LAYERDEPENDS_ams-bsp = "core"
+
+# We have recipes-* directories, add to BBFILES
+BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
+            ${LAYERDIR}/recipes-*/*/*.bbappend"
 
 BBFILES_DYNAMIC += " \
     meta-arm:${LAYERDIR}/bbappends/meta-arm/recipes-*/*/*.bb \
