Polish meta-ams layer.conf

--- a/meta-ams/conf/layer.conf
+++ b/meta-ams/conf/layer.conf
@@ -1,24 +1,30 @@
 # We have a conf and classes directory, add to BBPATH
 BBPATH =. "${LAYERDIR}:"
 
-# We have recipes-* directories, add to BBFILES
-BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
-            ${LAYERDIR}/recipes-*/*/*.bbappend"
-
 BBFILE_COLLECTIONS += "ams"
 BBFILE_PATTERN_ams = "^${LAYERDIR}/"
-BBFILE_PRIORITY_ams = "46"
 
-# This should only be incremented on significant changes that will
-# cause compatibility issues with other layers
-LAYERVERSION_ams = "3"
+BBFILE_PRIORITY_ams = "46"
+LAYERVERSION_ams = "4"
 LAYERSERIES_COMPAT_ams = "kirkstone mickledore"
 
+LAYERDEPENDS_ams-bsp = "core"
 
 # Set a variable to get to the top of the metadata location
 PLOSCOREBASE = '${@os.path.normpath("${LAYERDIR}/../")}'
-
-# Additional custom license directories.
-# Add your custom licenses directories this path.
 # Add your custom license files into one of this directories.
 # LICENSE_PATH += "${LAYERDIR}/files/custom-licenses"
+
+BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
+            ${LAYERDIR}/recipes-*/*/*.bbappend"
+
+BBFILES_DYNAMIC += " \
+    chromium-browser-layer:${LAYERDIR}/dynamic-layers/chromium-browser-layer/*/*/*.bb \
+    chromium-browser-layer:${LAYERDIR}/dynamic-layers/chromium-browser-layer/*/*/*.bbappend \
+    \
+    openembedded-layer:${LAYERDIR}/dynamic-layers/openembedded-layer/*/*/*.bb \
+    openembedded-layer:${LAYERDIR}/dynamic-layers/openembedded-layer/*/*/*.bbappend \
+    \
+    qt6-layer:${LAYERDIR}/dynamic-layers/qt6-layer/*/*/*.bb \
+    qt6-layer:${LAYERDIR}/dynamic-layers/qt6-layer/*/*/*.bbappend \
+"
