template: Modify and relocate variscite template

--- a/meta-ams/conf/templates/variscite/bblayers.conf.sample
+++ b/meta-ams/conf/templates/variscite/bblayers.conf.sample
@@ -28,6 +28,9 @@ BBLAYERS = " \
   ${BSPDIR}/sources/meta-variscite-bsp-common \
   ${BSPDIR}/sources/meta-variscite-sdk-common \
   ${BSPDIR}/sources/meta-variscite-hab \
+  \
+  ${BSPDIR}/sources/ams/meta-ams \
+  ${BSPDIR}/sources/ams/meta-ams-bsp \
 "
 
 # i.MX Yocto Project Release layers
