layer: Fix meta-ams dependency

--- a/meta-ams/conf/layer.conf
+++ b/meta-ams/conf/layer.conf
@@ -8,7 +8,7 @@ BBFILE_PRIORITY_ams = "46"
 LAYERVERSION_ams = "4"
 LAYERSERIES_COMPAT_ams = "kirkstone mickledore"
 
-LAYERDEPENDS_ams-bsp = "core"
+LAYERDEPENDS_ams = "core"
 
 # Set a variable to get to the top of the metadata location
 PLOSCOREBASE = '${@os.path.normpath("${LAYERDIR}/../")}'
