distro: Update meta-ams-bsp

--- a/meta-ams-bsp/conf/distro/ams-bsp.conf
+++ b/meta-ams-bsp/conf/distro/ams-bsp.conf
@@ -2,9 +2,8 @@
 #------------------------------------------------------------------------------
 DISTRO = "ams-bsp"
 DISTRO_NAME = "AMS BSP Development Distribution"
-DISTRO_VERSION = "2023-Q1"
+DISTRO_VERSION ?= "2024-Q1"
 BUILD_VARIANT = "prod"
-DISTRO_VERSION = "kirkstone"
 VENDOR = "almedso"
 TARGET_VENDOR = "-${VENDOR}"
 
