distro: Update ams-bsp

--- a/meta-ams-bsp/conf/distro/ams-bsp.conf
+++ b/meta-ams-bsp/conf/distro/ams-bsp.conf
@@ -50,8 +50,11 @@ DISTRO_FEATURES += "largefile"
 DISTRO_FEATURES += "libc-locales"
 DISTRO_FEATURES += "multiarch"
 DISTRO_FEATURES += "opengl"
+# Pam is also needed for wayland
+DISTRO_FEATURES += "pam"
 DISTRO_FEATURES += "pci"
 DISTRO_FEATURES += "ptest"
+DISTRO_FEATURES += "seccomp"
 # Software update
 # DISTRO_FEATURES += "swupdate"
 # DISTRO_FEATURES += "rauc"
@@ -60,8 +63,9 @@ DISTRO_FEATURES += "usbhost"
 DISTRO_FEATURES += "vendor"
 DISTRO_FEATURES += "vulcan"
 # support of wayland
-DISTRO_FEATURES:append = " wayland pam "
+DISTRO_FEATURES:append = " wayland"
 DISTRO_FEATURES += "wifi"
+# DISTRO_FEATURES += "x11"
 DISTRO_FEATURES += "xattr"
 DISTRO_FEATURES += "zeroconf"
 
@@ -73,7 +77,8 @@ DISTRO_EXTRA_RDEPENDS = "packagegroup-core-boot"
 # Preferred providers and versions
 #------------------------------------------------------------------------------
 PREFERRRED_PROVIDER_linux-mfgtool-base = "linux-imx-mfgtool"
-
+PREFERRED_VERSION_gstreamer1.0-plugins-base = "1.20.3.imx"
+BBMASK = "gstreamer1.0-plugins-base_1.22.0.imx.bb"
 # Sanity checks and QA checks
 #------------------------------------------------------------------------------
 SANITY_TESTED_DISTROS = " \
