distro: Update ams

--- a/meta-ams/conf/distro/ams.conf
+++ b/meta-ams/conf/distro/ams.conf
@@ -20,7 +20,7 @@ LICENSE_FLAGS_ACCEPTED += "commercial non-commercial synaptics-killswitch"
 
 OPKG_ARGS:remove = "--prefer-arch-to-version"
 
-DISTRO_FEATURES_LIBC += "libc-locales"
+DISTRO_FEATURES_LIBC = " libc-locales"
 
 DISTRO_FEATURES = "\
   ${DISTRO_FEATURES_LIBC} \
@@ -38,9 +38,11 @@ DISTRO_FEATURES = "\
   wayland  \
   wifi \
   vulcan \
+  x11 \
   xattr \
 "
-DISTRO_FEATURES:append = " virtualization"
+# DISTRO_FEATURES:append = " virtualization"
+# DISTRO_FEATURES:append = " seccomp"
 
 VIRTUAL-RUNTIME_init_manager = "systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
@@ -48,6 +50,7 @@ DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
 PACKAGE_CLASSES ?= "package_ipk"
 PACKAGE_FEED_URIS ?= "http://ams.almedso.de/feeds"
 
+PREFERRED_VERSION_gstreamer1.0-plugins-base = "1.20.3.imx"
 ENTERPRISE_DISTRO = "1"
 
 SANITY_TESTED_DISTROS = " \
