layer: make webserver appends dynamic in meta-ams

--- a/meta-ams/conf/layer.conf
+++ b/meta-ams/conf/layer.conf
@@ -25,6 +25,9 @@ BBFILES_DYNAMIC += " \
     openembedded-layer:${LAYERDIR}/dynamic-layers/openembedded-layer/*/*/*.bb \
     openembedded-layer:${LAYERDIR}/dynamic-layers/openembedded-layer/*/*/*.bbappend \
     \
+    webserver:${LAYERDIR}/dynamic-layers/openembedded-webserver-layer/*/*/*.bb \
+    webserver:${LAYERDIR}/dynamic-layers/openembedded-webserver-layer/*/*/*.bbappend \
+    \
     qt6-layer:${LAYERDIR}/dynamic-layers/qt6-layer/*/*/*.bb \
     qt6-layer:${LAYERDIR}/dynamic-layers/qt6-layer/*/*/*.bbappend \
 "
