distro: Keep just ams distro in meta-ams layer

--- a/meta-ams/conf/distro/ams.conf
+++ b/meta-ams/conf/distro/ams.conf
@@ -1,8 +1,8 @@
 # Distro meta data
 #------------------------------------------------------------------------------
-DISTRO = "ams-bsp"
-DISTRO_NAME = "AMS BSP Development Distribution"
-DISTRO_VERSION ?= "2024-Q1"
+DISTRO = "ams"
+DISTRO_NAME = "AMS Distribution"
+DISTRO_VERSION ?= "2024-Q2"
 BUILD_VARIANT = "prod"
 VENDOR = "almedso"
 TARGET_VENDOR = "-${VENDOR}"
