--- a/meta-ams-app/conf/layer.conf
+++ b/meta-ams-app/conf/layer.conf
@@ -1,14 +1,14 @@
 # We have a conf and classes directory, add to BBPATH
 BBPATH =. "${LAYERDIR}:"
 
-BBFILE_COLLECTIONS += "ams"
-BBFILE_PATTERN_ams = "^${LAYERDIR}/"
+BBFILE_COLLECTIONS += "ams-app"
+BBFILE_PATTERN_ams-app = "^${LAYERDIR}/"
 
-BBFILE_PRIORITY_ams = "46"
-LAYERVERSION_ams = "4"
-LAYERSERIES_COMPAT_ams = "kirkstone mickledore"
+BBFILE_PRIORITY_ams-app = "46"
+LAYERVERSION_ams-app = "4"
+LAYERSERIES_COMPAT_ams-app = "kirkstone mickledore"
 
-LAYERDEPENDS_ams = "core"
+LAYERDEPENDS_ams-app = "core"
 
 # Set a variable to get to the top of the metadata location
 PLOSCOREBASE = '${@os.path.normpath("${LAYERDIR}/../")}'
