template: Relocate templates from ams-app to app
Add meta-ams-app template where appropriate

--- a/meta-ams/conf/templates/browser/bblayers.conf.sample
+++ b/meta-ams/conf/templates/browser/bblayers.conf.sample
@@ -35,6 +35,7 @@ BBLAYERS = " \
   ${LAYERS_BASE_DIR}/meta-arm/meta-arm-toolchain \
   \
   ${LAYERS_BASE_DIR}/ams/meta-ams \
+  ${LAYERS_BASE_DIR}/ams/meta-ams-app \
   ${LAYERS_BASE_DIR}/ams/meta-ams-bsp \
 "
 
