--- a/meta-ams-bsp/conf/templates/stm32mp1/local.conf.sample
+++ b/meta-ams-bsp/conf/templates/stm32mp1/local.conf.sample
@@ -2,7 +2,7 @@
 # track the version of this file when it was generated. This can safely be ignored if
 # this doesn't mean anything to you.
 CONF_VERSION = "2"
-DISTRO ?= "ams-bsp"
+DISTRO ?= "ams"
 YOCTO_VERSION = "kirkstone"
 
 PACKAGE_CLASSES ?= "package_ipk"
