--- a/meta-ams/conf/templates/ams/bblayers.conf.sample
+++ b/meta-ams/conf/templates/ams/bblayers.conf.sample
@@ -17,6 +17,20 @@ BBLAYERS = " \
   ${BSPDIR}/sources/meta-openembedded/meta-python \
   ${BSPDIR}/sources/meta-openembedded/meta-webserver \
   \
+  ${BSPDIR}/sources/meta-freescale \
+  ${BSPDIR}/sources/meta-freescale-3rdparty \
+  ${BSPDIR}/sources/meta-freescale-distro \
+  ${BSPDIR}/sources/meta-clang \
+  ${BSPDIR}/sources/meta-browser/meta-chromium \
+  \
+  ${BSPDIR}/sources/meta-swupdate \
+  ${BSPDIR}/sources/meta-virtualization \
+  ${BSPDIR}/sources/meta-variscite-bsp-imx \
+  ${BSPDIR}/sources/meta-variscite-sdk-imx \
+  ${BSPDIR}/sources/meta-variscite-bsp-common \
+  ${BSPDIR}/sources/meta-variscite-sdk-common \
+  ${BSPDIR}/sources/meta-variscite-hab \
+  \
   ${BSPDIR}/sources/meta-raspberrypi \
   \
   ${BSPDIR}/sources/ams/meta-ams \
@@ -38,9 +52,6 @@ EXCLUDED_LAYERS = " \
   ${BSPDIR}/sources/meta-imx/meta-bsp \
   ${BSPDIR}/sources/meta-imx/meta-sdk \
   ${BSPDIR}/sources/meta-imx/meta-ml \
-  ${BSPDIR}/sources/meta-freescale \
-  ${BSPDIR}/sources/meta-freescale-3rdparty \
-  ${BSPDIR}/sources/meta-freescale-distro \
   ${BSPDIR}/sources/meta-phytec \
   ${BSPDIR}/sources/meta-arm/meta-arm \
   ${BSPDIR}/sources/meta-arm/meta-arm-toolchain \
