distro: Adjust some preferred stuff

--- a/meta-ams/conf/distro/ams.conf
+++ b/meta-ams/conf/distro/ams.conf
@@ -76,9 +76,8 @@ DISTRO_EXTRA_RDEPENDS = "packagegroup-core-boot"
 
 # Preferred providers and versions
 #------------------------------------------------------------------------------
-PREFERRRED_PROVIDER_linux-mfgtool-base = "linux-imx-mfgtool"
-PREFERRED_VERSION_gstreamer1.0-plugins-base = "1.20.3.imx"
-BBMASK = "gstreamer1.0-plugins-base_1.22.0.imx.bb"
+PREFERRED_PROVIDER_linux-mfgtool-base = "linux-imx-mfgtool"
+PREFERRED_PROVIDER_virtual/wpebackend = "wpebackend-fdo"
 # Sanity checks and QA checks
 #------------------------------------------------------------------------------
 SANITY_TESTED_DISTROS = " \
