layer: Move variscite append to dynamic layer

--- a/meta-ams-bsp/conf/layer.conf
+++ b/meta-ams-bsp/conf/layer.conf
@@ -23,4 +23,6 @@ BBFILES_DYNAMIC += " \
     raspberrypi:${LAYERDIR}/bbappends/meta-raspberrypi/recipes-*/*/*.bbappend \
     stm-st-stm32mp:${LAYERDIR}/bbappends/meta-st-stm32mp/recipes-*/*/*.bb \
     stm-st-stm32mp:${LAYERDIR}/bbappends/meta-st-stm32mp/recipes-*/*/*.bbappend \
+    variscite-bsp:${LAYERDIR}/bbappends/meta-variscite/recipes-*/*/*.bb \
+    variscite-bsp:${LAYERDIR}/bbappends/meta-variscite/recipes-*/*/*.bbappend \
 "
